<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
     <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:scrollbars="none"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

           <TextView 
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center"
               android:textAppearance="?android:attr/textAppearanceLarge"
               android:text="@string/dominio" />
           <ImageView
                android:paddingTop="10dp"
                android:paddingBottom="35dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/it_dominio" />
			<TextView 
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center"
               android:textAppearance="?android:attr/textAppearanceLarge"
               android:text="@string/momenti_opposti" />
            <ImageView
                android:paddingTop="10dp"
                android:paddingBottom="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/it_momenti_opposti" />
			<TextView 
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center"
               android:textAppearance="?android:attr/textAppearanceLarge"
               android:text="@string/momenti_uguali" />
            <ImageView
                android:paddingTop="10dp"
                android:paddingBottom="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/it_momenti_uguali" />
            
		</LinearLayout>
    </ScrollView>

</LinearLayout>
