<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gray"
    android:orientation="vertical" >

     <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/alessandro" />
            
            <TextView
		        android:id="@+id/textView1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_centerHorizontal="true"
		        android:layout_centerVertical="true"
				android:paddingLeft="20dp"
				android:paddingRight="20dp"
		        android:textIsSelectable="true"
		        android:text="@string/credits_ale"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/rolando" />
            
            <TextView
		        android:id="@+id/textView2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_centerHorizontal="true"
		        android:layout_centerVertical="true"
				android:paddingLeft="20dp"
				android:paddingRight="20dp"
		        android:textIsSelectable="true"
		        android:text="@string/credits_rol"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <TextView
		        android:id="@+id/textView3"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_centerHorizontal="true"
		        android:layout_centerVertical="true"
		        android:gravity="center"
				android:paddingLeft="20dp"
				android:paddingRight="20dp"
		        android:textIsSelectable="true"
		        android:text="@string/credits_mail"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
            
		</LinearLayout>

    </ScrollView>

</LinearLayout>
